# token_miser

./: .gitignore  .kanon  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  pyproject.toml  token-miser
.cursor/rules/: bt-002-compare-per-criterion.mdc  story-004-per-criterion.mdc
.github/workflows/: test.yml
.worktrees/ralphael-ec93712f-bt-003-a1/: token-miser
benchmarks/: repos.yaml
benchmarks/suites/: axis.yaml  domain-frontend.yaml  domain-iac.yaml  domain-python-api.yaml  quick.yaml  standard.yaml
benchmarks/tasks/: bm-axis-bashheavy.yaml  bm-axis-bigoutput.yaml  bm-axis-diff.yaml  bm-axis-explore.yaml  bm-axis-multiturn.yaml  bm-axis-reasoning.yaml  bm-axis-smallio.yaml  bm-axis-testrun.yaml  bm-fe-a11y-fix.yaml  bm-fe-api-integration.yaml  bm-fe-component-test.yaml  bm-fe-custom-hook.yaml  bm-fe-form-component.yaml  bm-fe-perf-optimize.yaml  bm-fe-trace-dataflow.yaml  bm-fe-typescript-refactor.yaml  bm-feat-001.yaml  bm-feat-002.yaml  bm-feat-003.yaml  bm-fix-001.yaml  bm-fix-002.yaml  bm-fix-003.yaml  bm-iac-cdk-nag.yaml  bm-iac-cdk-test.yaml  bm-iac-cdk-vpc-stack.yaml  bm-iac-cfn-refactor.yaml  bm-iac-cost-review.yaml  bm-iac-security-review.yaml  bm-iac-terraform-explore.yaml  bm-iac-terraform-module.yaml  bm-pyapi-fastapi-auth.yaml  bm-pyapi-fastapi-crud.yaml  bm-pyapi-fastapi-middleware.yaml  bm-pyapi-fastapi-openapi.yaml  bm-pyapi-flask-debug-500.yaml  bm-pyapi-flask-n-plus-one.yaml  bm-pyapi-flask-test-integration.yaml  bm-pyapi-httpx-test.yaml  bm-refactor-001.yaml  bm-refactor-002.yaml  (+7 more)
cmd/: smoke_test.go
cmd/token-miser/: main.go  token-miser
docs/: agent-agnostic-plan.md  index.html  kanon-integration.md  notes-cli-wiring.md  notes-observability.md  research-notes.md  results-axis.json  results-domain-python-api.json  results-quick.json  results-standard.json
docs/plans/: 2026-04-18-public-release-cleanup.md  2026-04-20-package-lifecycle.md  cli-wiring-plan.md  (+9 more)
scripts/: run-axis-matrix.sh  run-matrix.sh  run-suite-crossover.sh  run-suite-package-matrix.sh  run-suite-shared-baseline.sh
tasks/: kanon-status-001.yaml  loadout-diff-001.yaml  quick-001.yaml  synth-001.yaml  synth-002.yaml  synth-003.yaml
tests/: __init__.py  conftest.py  test_anomaly_detector_implementation.py  test_arm.py  test_budget_alerts.py  test_checker.py  test_cli.py  test_compare_cli_behavior.py  test_config_manager.py  test_cost_analyzer_implementation.py  test_cost_optimization.py  test_cost_per_project.py  test_db.py  test_digest.py  test_environment.py  test_evaluator.py  test_executor.py  test_history_wall_time.py  test_matrix.py  test_migrations.py  test_optimizer_implementation.py  test_package_adapter.py  test_package_ref.py  test_persistence_on_completion.py  test_profile_builder.py  test_publish.py  test_recommend.py  test_report.py  test_repos.py  test_show_cli_behavior.py  test_suite.py  test_task.py  test_trending_implementation.py  test_tune.py  test_tune_builder.py
token_miser/: __init__.py  models.py
(+99 files in other folders)
