[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-miser"
version = "0.1.0"
description = "Track and analyze token costs across projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
